--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.0-alpha13'
+        implementation 'com.google.android.libraries.places:places:1.1.0'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
